cigionline/static/themes/space_series/css/_article_series_page.scss
body {
  &.space-series-article-series {
    @include media-breakpoint-up(lg) {
      height: 100vh;
      overflow: hidden;
    }
    @include top-bar($background-color: transparent, $color: $white);
    background-color: $space-series-background-colour;
    color: $white;
    font-family: $space-series-font-secondary;
    padding-top: 6em;

    .space-series-article-series-hero {
      .hero-content {
        .opinion-series-label {
          color: $cigi-medium-grey;
          font-weight: 500;
          margin-bottom: 1em;
        }

        .title {
          @include media-breakpoint-up(lg) {
            font-size: 2.25em;
          }
          font-family: $space-series-font-primary;
          font-size: calc(3vw + 1em);
          font-weight: 500;
          line-height: 1;
          text-transform: uppercase;
        }

        .subtitle {
          font-weight: 500;
        }

        .short-description {
          font-size: 0.8em;
        }
      }
    }

    .in-the-series {
      .swiper {
        margin-top: 4em;
        position: relative;

        .swiper-container-series {
          padding: 0.5em;

          .swiper-wrapper {
            @include media-breakpoint-down(md) {
              flex-direction: column;
            }
            @include media-breakpoint-up(lg) {
              height: 400px;
            }
          }
        }

        article {
          @include media-breakpoint-up(lg) {
            flex-direction: column;
            border-top: 0;
            border-left: 1px solid $cigi-text-grey;
          }
          align-items: center;
          border-top: 1px solid $cigi-text-grey;
          display: flex;
          height: 100%;
          position: relative;

          &::before {
            content: '';
            height: 100%;
            left: 0;
            position: absolute;
            top: 0;
            transition: box-shadow 0.2s ease;
            width: 100%;
            z-index: -1;
          }

          &:hover {
            &::before {
              box-shadow: 0 0 10px 1px $white-alpha-80;
            }
          }

          &:last-child {
            @include media-breakpoint-up(lg) {
              border-bottom: 0;
              border-right: 1px solid $cigi-text-grey;
            }
            border-bottom: 1px solid $cigi-text-grey;
          }

          .series-item-image {
            @include media-breakpoint-up(lg) {
              width: auto;
            }
            flex-shrink: 0;
            position: relative;
            width: 100px;
            z-index: -2;
          }

          .series-item-content {
            @include link($color: $white, $hover-color: $cigi-primary-colour);
            @include media-breakpoint-up(lg) {
              margin-top: 4em;
              margin-left: 0;
            }
            display: flex;
            flex-direction: column;
            font-size: 0.8em;
            height: 100%;
            justify-content: space-between;
            margin-left: 3em;
            padding: 0.5em;

            .series-item-counter {
              @include media-breakpoint-up(lg) {
                display: flex;
              }
              display: none;

              span {
                &:first-child {
                  margin-right: 0.25em;
                  position: relative;
                  width: 100%;

                  &::before {
                    background-color: $white;
                    bottom: 9px;
                    content: '';
                    height: 5px;
                    position: absolute;
                    width: 100%;
                  }
                }
              }
            }

            .series-item-title {
              font-size: 1em;
            }

            .authors {
              margin: 0;
            }
          }
        }

        .swiper-button {
          @include media-breakpoint-down(md) {
            display: none;
          }
          color: $white;
          transition: color 0.3s ease;

          &:hover {
            color: $cigi-primary-colour;
          }

          &::before {
            content: 'MORE';
            position: absolute;
            bottom: -35px;
          }

          &.swiper-button-prev {
            left: -75px;
          }

          &.swiper-button-next {
            right: -75px;
          }
        }
      }
    }
  }
}

